--- a/index.html
+++ b/index.html
@@ -2325,7 +2325,7 @@
 
     <section class="deal-timer position-relative mb-5 d-flex align-items-end overflow-hidden"
              style="background-color: #ebebeb;">
-        <div class="background-img" style="background-image: url('/images/img.png');"></div>
+        <div class="background-img" style="background-image: url('/images/img_2.png');"></div>
 
         <div class="deal-timer-wrapper container position-relative">
             <div class="deal-timer__content pb-2 mb-3 pb-xl-5 mb-xl-3 mb-xxl-5">
@@ -2496,10 +2496,9 @@
                     <div class="swiper-slide product-card">
                         <div class="pc__img-wrapper">
                             <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-1-1.jpg" width="330" height="400"
+                                <img loading="lazy" src="/images/img_4.png" width="330" height="400"
                                      alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-1-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
+
                             </a>
                             <div class="anim_appear-bottom position-absolute w-100 text-center mb-3">
                                 <button class="btn btn-round btn-hover-red border-0 text-uppercase me-1 me-md-2 js-add-cart js-open-aside"
@@ -2538,10 +2537,9 @@
                     <div class="swiper-slide product-card">
                         <div class="pc__img-wrapper">
                             <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-2-1.jpg" width="330" height="400"
+                                <img loading="lazy" src="/images/img_5.png" width="330" height="400"
                                      alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-2-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
+
                             </a>
                             <div class="product-label text-uppercase bg-white top-0 left-0 mt-2 mx-2">New</div>
                             <div class="anim_appear-bottom position-absolute w-100 text-center mb-3">
@@ -2587,10 +2585,8 @@
                     <div class="swiper-slide product-card">
                         <div class="pc__img-wrapper">
                             <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-3-1.jpg" width="330" height="400"
+                                <img loading="lazy" src="/images/img_6.png" width="330" height="400"
                                      alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-3-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
                             </a>
                             <div class="anim_appear-bottom position-absolute w-100 text-center mb-3">
                                 <button class="btn btn-round btn-hover-red border-0 text-uppercase me-1 me-md-2 js-add-cart js-open-aside"
@@ -2629,10 +2625,8 @@
                     <div class="swiper-slide product-card">
                         <div class="pc__img-wrapper">
                             <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-4-1.jpg" width="330" height="400"
+                                <img loading="lazy" src="/images/img_7.png" width="330" height="400"
                                      alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-4-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
                             </a>
                             <div class="product-label bg-red text-white right-0 top-0 left-auto mt-2 mx-2">-67%</div>
                             <div class="anim_appear-bottom position-absolute w-100 text-center mb-3">
@@ -2673,10 +2667,8 @@
                     <div class="swiper-slide product-card">
                         <div class="pc__img-wrapper">
                             <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-5-1.jpg" width="330" height="400"
+                                <img loading="lazy" src="/images/img_8.png" width="330" height="400"
                                      alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-5-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
                             </a>
                             <div class="product-label text-uppercase bg-black text-white top-0 left-0 mt-2 mx-2">Sale
                             </div>
@@ -2717,10 +2709,8 @@
                     <div class="swiper-slide product-card">
                         <div class="pc__img-wrapper">
                             <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-6-1.jpg" width="330" height="400"
+                                <img loading="lazy" src="/images/img_9.png" width="330" height="400"
                                      alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-6-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
                             </a>
                             <div class="anim_appear-bottom position-absolute w-100 text-center mb-3">
                                 <button class="btn btn-round btn-hover-red border-0 text-uppercase me-1 me-md-2 js-add-cart js-open-aside"
@@ -2757,90 +2747,6 @@
                         </div>
                     </div>
 
-                    <div class="swiper-slide product-card">
-                        <div class="pc__img-wrapper">
-                            <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-7-1.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-7-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
-                            </a>
-                            <div class="anim_appear-bottom position-absolute w-100 text-center mb-3">
-                                <button class="btn btn-round btn-hover-red border-0 text-uppercase me-1 me-md-2 js-add-cart js-open-aside"
-                                        data-aside="cartDrawer" title="Add To Cart">
-                                    <svg class="d-inline-block" width="14" height="14" viewBox="0 0 20 20" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <use href="#icon_cart"/>
-                                    </svg>
-                                </button>
-                                <button class="btn btn-round btn-hover-red border-0 text-uppercase me-1 me-md-2 js-quick-view"
-                                        data-bs-toggle="modal" data-bs-target="#quickView" title="Quick view">
-                                    <svg class="d-inline-block" width="18" height="18" viewBox="0 0 18 18"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <use href="#icon_view"/>
-                                    </svg>
-                                </button>
-                                <button class="btn btn-round btn-hover-red border-0 text-uppercase js-add-wishlist"
-                                        title="Add To Wishlist">
-                                    <svg width="14" height="14" viewBox="0 0 20 20" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <use href="#icon_heart"/>
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
-
-                        <div class="pc__info position-relative">
-                            <p class="pc__category">Dresses</p>
-                            <h6 class="pc__title"><a href="./product1_simple.html">Cotton Jersey T-Shirt</a></h6>
-                            <div class="product-card__price d-flex">
-                                <span class="money price">$17</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="swiper-slide product-card">
-                        <div class="pc__img-wrapper">
-                            <a href="./product1_simple.html">
-                                <img loading="lazy" src="/images/home/demo4/product-8-1.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img">
-                                <img loading="lazy" src="/images/home/demo4/product-8-2.jpg" width="330" height="400"
-                                     alt="Cropped Faux leather Jacket" class="pc__img pc__img-second">
-                            </a>
-                            <div class="anim_appear-bottom position-absolute w-100 text-center mb-3">
-                                <button class="btn btn-round btn-hover-red border-0 text-uppercase me-1 me-md-2 js-add-cart js-open-aside"
-                                        data-aside="cartDrawer" title="Add To Cart">
-                                    <svg class="d-inline-block" width="14" height="14" viewBox="0 0 20 20" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <use href="#icon_cart"/>
-                                    </svg>
-                                </button>
-                                <button class="btn btn-round btn-hover-red border-0 text-uppercase me-1 me-md-2 js-quick-view"
-                                        data-bs-toggle="modal" data-bs-target="#quickView" title="Quick view">
-                                    <svg class="d-inline-block" width="18" height="18" viewBox="0 0 18 18"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <use href="#icon_view"/>
-                                    </svg>
-                                </button>
-                                <button class="btn btn-round btn-hover-red border-0 text-uppercase js-add-wishlist"
-                                        title="Add To Wishlist">
-                                    <svg width="14" height="14" viewBox="0 0 20 20" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <use href="#icon_heart"/>
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
-
-                        <div class="pc__info position-relative">
-                            <p class="pc__category">Dresses</p>
-                            <h6 class="pc__title"><a href="./product1_simple.html">Zessi Dresses</a></h6>
-                            <div class="product-card__price d-flex">
-                                <span class="money price price-old">$129</span>
-                                <span class="money price price-sale">$99</span>
-                            </div>
-                        </div>
-                    </div>
                 </div><!-- /.swiper-wrapper -->
             </div><!-- /.swiper-container js-swiper-slider -->
         </div><!-- /.position-relative -->
