--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="overflow-hidden">
                 <ul class="navigation__list list-unstyled position-relative">
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link js-nav-right d-flex align-items-center">Home
+                        <a href="index.html" class="navigation__link js-nav-right d-flex align-items-center">Home
                             <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <use href="#icon_next_sm"/>
@@ -270,7 +270,7 @@
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link js-nav-right d-flex align-items-center">About Us
+                        <a href="#about" class="navigation__link js-nav-right d-flex align-items-center">About Us
                             <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <use href="#icon_next_sm"/>
@@ -280,14 +280,14 @@
                     </li>
 
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link js-nav-right d-flex align-items-center">Products
+                        <a href="product.html" class="navigation__link js-nav-right d-flex align-items-center">Products
                             <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <use href="#icon_next_sm"/>
                             </svg>
                         </a>
                         <div class="sub-menu position-absolute top-0 start-100 w-100 d-none">
-                            <a href="#"
+                            <a href="product.html"
                                class="navigation__link js-nav-left d-flex align-items-center border-bottom mb-2">
                                 <svg class="me-2" width="7" height="11" viewBox="0 0 7 11"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -308,7 +308,7 @@
                     </li>
 
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link js-nav-right d-flex align-items-center">Faq
+                        <a href="#faq" class="navigation__link js-nav-right d-flex align-items-center">Faq
                             <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <use href="#icon_next_sm"/>
@@ -318,7 +318,7 @@
                     </li>
 
                     <li class="navigation__item">
-                        <a href="./contact.html" class="navigation__link">Contact</a>
+                        <a href="#contact" class="navigation__link">Contact</a>
                     </li>
                 </ul><!-- /.navigation__list -->
             </div><!-- /.overflow-hidden -->
@@ -460,14 +460,14 @@
         <nav class="navigation">
             <ul class="navigation__list list-unstyled d-flex">
                 <li class="navigation__item">
-                    <a href="#" class="navigation__link">Home</a>
+                    <a href="index.html" class="navigation__link">Home</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="#" class="navigation__link">About Us</a>
+                    <a href="#about" class="navigation__link">About Us</a>
 
                 </li>
                 <li class="navigation__item">
-                    <a href="#" class="navigation__link">Products</a>
+                    <a href="product.html" class="navigation__link">Products</a>
                     <ul class="default-menu list-unstyled">
                         <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Promotional Jute
                             Bags</a></li>
@@ -478,64 +478,17 @@
                     </ul><!-- /.box-menu -->
                 </li>
                 <li class="navigation__item">
-                    <a href="#" class="navigation__link">Faq</a>
+                    <a href="#faq" class="navigation__link">Faq</a>
 
                 </li>
                 <li class="navigation__item">
-                    <a href="./contact.html" class="navigation__link">Contact</a>
+                    <a href="#contact" class="navigation__link">Contact</a>
                 </li>
             </ul><!-- /.navigation__list -->
         </nav><!-- /.navigation -->
 
         <div class="header-tools d-flex align-items-center">
-            <!-- <div class="header-tools__item hover-container">
-                 <div class="js-hover__open position-relative">
-                     <a class="js-search-popup search-field__actor" href="#">
-                         <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
-                             <use href="#icon_search"/>
-                         </svg>
-                         <i class="btn-icon btn-close-lg"></i>
-                     </a>
-                 </div>
 
-                 <div class="search-popup js-hidden-content">
-                     <form action="./search_result.html" method="GET" class="search-field container">
-                         <p class="text-uppercase text-secondary fw-medium mb-4">What are you looking for?</p>
-                         <div class="position-relative">
-                             <input class="search-field__input search-popup__input w-100 fw-medium" type="text"
-                                    name="search-keyword" placeholder="Search products"/>
-                             <button class="btn-icon search-popup__submit" type="submit">
-                                 <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
-                                      xmlns="http://www.w3.org/2000/svg">
-                                     <use href="#icon_search"/>
-                                 </svg>
-                             </button>
-                             <button class="btn-icon btn-close-lg search-popup__reset" type="reset"></button>
-                         </div>
-
-                         <div class="search-popup__results">
-                             <div class="sub-menu search-suggestion">
-                                 <h6 class="sub-menu__title fs-base">Quicklinks</h6>
-                                 <ul class="sub-menu__list list-unstyled">
-                                     <li class="sub-menu__item"><a href="./shop2.html" class="menu-link menu-link_us-s">New
-                                         Arrivals</a></li>
-                                     <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bags</a>
-                                     </li>
-                                     <li class="sub-menu__item"><a href="./shop3.html" class="menu-link menu-link_us-s">Accessories</a>
-                                     </li>
-                                     <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Footwear</a>
-                                     </li>
-                                     <li class="sub-menu__item"><a href="#"
-                                                                   class="menu-link menu-link_us-s">Sweatshirt</a></li>
-                                 </ul>
-                             </div>
-
-                             <div class="search-result row row-cols-5"></div>
-                         </div>
-                     </form>&lt;!&ndash; /.header-search &ndash;&gt;
-                 </div>&lt;!&ndash; /.search-popup &ndash;&gt;
-             </div>--><!-- /.header-tools__item hover-container -->
 
 
         </div><!-- /.header__tools -->
@@ -676,7 +629,7 @@
 
     <main>
         <div class="mb-4 pb-4"></div>
-        <section class="about-us container">
+        <section class="about-us container" id="about">
 
             <div class="about-us__content pb-5 mb-5">
 
@@ -694,14 +647,14 @@
                     </p>
                     <div class="row mb-3">
                         <div class="col-md-6">
-                            <h5 class="mb-3">Our Mission</h5>
+                            <h3 class="mb-3">Our Mission</h3>
                             <p class="mb-3 fs-5">We strive to contribute to the global movement towards sustainability
                                 by promoting the use of jute, a natural and biodegradable material. Through our
                                 dedication to ethical practices, fair trade principles, and innovation, we aim to be a
                                 leading force in the transition to a greener and more sustainable future.</p>
                         </div>
                         <div class="col-md-6">
-                            <h5 class="mb-3">Our Vision</h5>
+                            <h3 class="mb-3">Our Vision</h3>
                             <p class="mb-3 fs-5">We strive to create a future where the use of single-use plastics is
                                 significantly reduced, and individuals and businesses alike actively seek and embrace
                                 eco-friendly alternatives. As a Jute Bag Store, we aspire to be at the forefront of this
@@ -1823,7 +1776,7 @@
 
 <main>
     <div class="mb-5 pb-4"></div>
-    <section class="container mw-930 lh-30">
+    <section class="container mw-930 lh-30" id="faq">
         <h2 class="section-title text-uppercase fw-bold mb-5">FAQ</h2>
 
         <div id="faq_accordion" class="faq-accordion accordion mb-5">
@@ -1974,7 +1927,7 @@
 </section><!-- /.products-carousel container -->
 
 <!-------------- Footer Type 1 with Top block -------------->
-<footer class="footer footer_type_1">
+<footer class="footer footer_type_1 " id="contact">
 
 
     <div class="footer-middle container">
@@ -2037,13 +1990,13 @@
             <div class="footer-column footer-menu mb-4 mb-lg-0">
                 <h6 class="sub-menu__title text-uppercase">Quick Links</h6>
                 <ul class="sub-menu__list list-unstyled">
-                    <li class="sub-menu__item"><a href="./contact.html" class="menu-link menu-link_us-s">Home</a>
+                    <li class="sub-menu__item"><a href="index.html" class="menu-link menu-link_us-s">Home</a>
                     </li>
-                    <li class="sub-menu__item"><a href="./about.html" class="menu-link menu-link_us-s">About Us</a></li>
+                    <li class="sub-menu__item"><a href="#about" class="menu-link menu-link_us-s">About Us</a></li>
 
-                    <li class="sub-menu__item"><a href="./contact.html" class="menu-link menu-link_us-s">Faq</a>
+                    <li class="sub-menu__item"><a href="#faq" class="menu-link menu-link_us-s">Faq</a>
                     </li>
-                    <li class="sub-menu__item"><a href="./contact.html" class="menu-link menu-link_us-s">Contact Us</a>
+                    <li class="sub-menu__item"><a href="#contact" class="menu-link menu-link_us-s">Contact Us</a>
                     </li>
                 </ul>
             </div><!-- /.footer-column -->
@@ -2094,43 +2047,6 @@
     </div><!-- /.footer-bottom container -->
 </footer>
 
-<!--&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; Mobile Fixed Footer &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
-<!--<footer class="footer-mobile container w-100 px-5 d-md-none bg-body">
-    <div class="row text-center">
-        <div class="col-4">
-            <a href="/" class="footer-mobile__link d-block">
-                <svg class="d-block" width="18" height="18" viewBox="0 0 18 18" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <use href="#icon_home"/>
-                </svg>
-                <span>Home</span>
-            </a>
-        </div> /.col-3
-
-        <div class="col-4">
-            <a href="/" class="footer-mobile__link d-block">
-                <svg class="d-block" width="18" height="18" viewBox="0 0 18 18" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <use href="#icon_hanger"/>
-                </svg>
-                <span>Shop</span>
-            </a>
-        </div> /.col-3
-
-        <div class="col-4">
-            <a href="/" class="footer-mobile__link d-flex flex-column align-items-center">
-                <div class="position-relative">
-                    <svg class="d-block" width="18" height="18" viewBox="0 0 20 20" fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <use href="#icon_heart"/>
-                    </svg>
-                    <span class="wishlist-amount d-block position-absolute js-wishlist-count">3</span>
-                </div>
-                <span>Wishlist</span>
-            </a>
-        </div> /.col-3
-    </div> /.row
-</footer> /.footer-mobile container position-fixed d-md-none bottom-0 -->
 
 <!----------- Customer Login Form ----------->
 <div class="aside aside_right overflow-hidden customer-forms" id="customerForms">
@@ -2361,7 +2277,7 @@
                                                aria-selected="false"><span class="rline-content">Classy</span></a>
                                         </li>
                                         <li class="nav-item position-relative" role="presentation">
-                                            <a class="nav-link nav-link_rline" href="#"><span
+                                            <a class="nav-link nav-link_rline" href="index.html"><span
                                                     class="rline-content">HOME</span></a>
                                         </li>
                                         <li class="nav-item position-relative" role="presentation">
