--- a/product.html
+++ b/product.html
@@ -264,7 +264,7 @@
       <div class="overflow-hidden">
         <ul class="navigation__list list-unstyled position-relative">
           <li class="navigation__item">
-            <a href="#" class="navigation__link js-nav-right d-flex align-items-center">Home
+            <a href="index.html" class="navigation__link js-nav-right d-flex align-items-center">Home
               <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                    xmlns="http://www.w3.org/2000/svg">
                 <use href="#icon_next_sm"/>
@@ -282,14 +282,29 @@
           </li>
 
           <li class="navigation__item">
-            <a href="#" class="navigation__link js-nav-right d-flex align-items-center">Products<svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11" xmlns="http://www.w3.org/2000/svg"><use href="#icon_next_sm" /></svg></a>
+            <a href="product.html" class="navigation__link js-nav-right d-flex align-items-center">Products
+              <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
+                   xmlns="http://www.w3.org/2000/svg">
+                <use href="#icon_next_sm"/>
+              </svg>
+            </a>
             <div class="sub-menu position-absolute top-0 start-100 w-100 d-none">
-              <a href="#" class="navigation__link js-nav-left d-flex align-items-center border-bottom mb-2"><svg class="me-2" width="7" height="11" viewBox="0 0 7 11" xmlns="http://www.w3.org/2000/svg"><use href="#icon_prev_sm" /></svg>Products</a>
+              <a href="product.html"
+                 class="navigation__link js-nav-left d-flex align-items-center border-bottom mb-2">
+                <svg class="me-2" width="7" height="11" viewBox="0 0 7 11"
+                     xmlns="http://www.w3.org/2000/svg">
+                  <use href="#icon_prev_sm"/>
+                </svg>
+                Products</a>
               <ul class="list-unstyled">
-                <li class="sub-menu__item"><a href="blog_list1.html" class="menu-link menu-link_us-s">Product V1</a></li>
-                <li class="sub-menu__item"><a href="blog_list2.html" class="menu-link menu-link_us-s">Product V2</a></li>
-                <li class="sub-menu__item"><a href="blog_list3.html" class="menu-link menu-link_us-s">Product V3</a></li>
-                <li class="sub-menu__item"><a href="blog_single.html" class="menu-link menu-link_us-s">Product Detail</a></li>
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Promotional Jute
+                  Bags</a></li>
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bangladeshi Jute
+                  Bags</a></li>
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute
+                  Fabrics </a></li>
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Yarn </a>
+                </li>
               </ul>
             </div>
           </li>
@@ -391,12 +406,7 @@
 <!-------------- Header Type 2 -------------->
 <header id="header" class="header header-fullwidth header-transparent-bg">
   <div class="header-top d-flex bg-black color-white align-items-center">
-    <ul class="list-unstyled d-flex flex-1 gap-3 m-0">
-      <li><a href="#" class="menu-link menu-link_us-s color-white">Shipping</a></li>
-      <li><a href="#" class="menu-link menu-link_us-s color-white">FAQ</a></li>
-      <li><a href="#" class="menu-link menu-link_us-s color-white">Contact</a></li>
-      <li><a href="#" class="menu-link menu-link_us-s color-white">Track Order</a></li>
-    </ul>
+
     <p class="mx-auto mb-0">FREE SHIPPING WORLDWIDE</p>
     <div class="heeader-top__right flex-1 d-flex gap-1 justify-content-end">
       <ul class="social-links list-unstyled d-flex flex-wrap mb-0">
@@ -433,17 +443,13 @@
           </a>
         </li>
       </ul>
-      <select class="form-select form-select-sm bg-transparent color-white" name="store-language">
-        <option value="english" selected>English</option>
-        <option value="german">German</option>
-        <option value="french">French</option>
-        <option value="swedish">Swedish</option>
-      </select>
-      <select class="form-select form-select-sm bg-transparent color-white" name="store-currency">
-        <option value="usd" selected>$ USD</option>
-        <option value="gbp">£ GBP</option>
-        <option value="eur">€ EURO</option>
-      </select>
+      <!--   <select class="form-select form-select-sm bg-transparent color-white" name="store-language">
+             <option value="english" selected>English</option>
+             <option value="german">German</option>
+             <option value="french">French</option>
+             <option value="swedish">Swedish</option>
+         </select>-->
+
     </div>
   </div>
   <div class="header-desk header-desk_type_1">
@@ -456,19 +462,21 @@
     <nav class="navigation">
       <ul class="navigation__list list-unstyled d-flex">
         <li class="navigation__item">
-          <a href="#" class="navigation__link">Home</a>
+          <a href="index.html" class="navigation__link">Home</a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__link">About Us</a>
 
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link">Products</a>
+          <a href="product.html" class="navigation__link">Products</a>
           <ul class="default-menu list-unstyled">
-            <li class="sub-menu__item"><a href="blog_list1.html" class="menu-link menu-link_us-s">Product V1</a></li>
-            <li class="sub-menu__item"><a href="blog_list2.html" class="menu-link menu-link_us-s">Product V2</a></li>
-            <li class="sub-menu__item"><a href="blog_list3.html" class="menu-link menu-link_us-s">Product V3</a></li>
-            <li class="sub-menu__item"><a href="blog_single.html" class="menu-link menu-link_us-s">Product Detail</a></li>
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Promotional Jute
+              Bags</a></li>
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bangladeshi Jute
+              Bags</a></li>
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Fabrics</a></li>
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Yarn</a></li>
           </ul><!-- /.box-menu -->
         </li>
         <li class="navigation__item">
@@ -482,85 +490,9 @@
     </nav><!-- /.navigation -->
 
     <div class="header-tools d-flex align-items-center">
-      <div class="header-tools__item hover-container">
-        <div class="js-hover__open position-relative">
-          <a class="js-search-popup search-field__actor" href="#">
-            <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
-                 xmlns="http://www.w3.org/2000/svg">
-              <use href="#icon_search"/>
-            </svg>
-            <i class="btn-icon btn-close-lg"></i>
-          </a>
-        </div>
 
-        <div class="search-popup js-hidden-content">
-          <form action="./search_result.html" method="GET" class="search-field container">
-            <p class="text-uppercase text-secondary fw-medium mb-4">What are you looking for?</p>
-            <div class="position-relative">
-              <input class="search-field__input search-popup__input w-100 fw-medium" type="text"
-                     name="search-keyword" placeholder="Search products"/>
-              <button class="btn-icon search-popup__submit" type="submit">
-                <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                  <use href="#icon_search"/>
-                </svg>
-              </button>
-              <button class="btn-icon btn-close-lg search-popup__reset" type="reset"></button>
-            </div>
 
-            <div class="search-popup__results">
-              <div class="sub-menu search-suggestion">
-                <h6 class="sub-menu__title fs-base">Quicklinks</h6>
-                <ul class="sub-menu__list list-unstyled">
-                  <li class="sub-menu__item"><a href="./shop2.html" class="menu-link menu-link_us-s">New
-                    Arrivals</a></li>
-                  <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bags</a>
-                  </li>
-                  <li class="sub-menu__item"><a href="./shop3.html" class="menu-link menu-link_us-s">Accessories</a>
-                  </li>
-                  <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Footwear</a>
-                  </li>
-                  <li class="sub-menu__item"><a href="#"
-                                                class="menu-link menu-link_us-s">Sweatshirt</a></li>
-                </ul>
-              </div>
 
-              <div class="search-result row row-cols-5"></div>
-            </div>
-          </form><!-- /.header-search -->
-        </div><!-- /.search-popup -->
-      </div><!-- /.header-tools__item hover-container -->
-
-      <div class="header-tools__item hover-container">
-        <a class="header-tools__item js-open-aside" href="#" data-aside="customerForms">
-          <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
-               xmlns="http://www.w3.org/2000/svg">
-            <use href="#icon_user"/>
-          </svg>
-        </a>
-      </div>
-
-      <a class="header-tools__item" href="#">
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use href="#icon_heart"/>
-        </svg>
-      </a>
-
-      <a href="#" class="header-tools__item header-tools__cart js-open-aside" data-aside="cartDrawer">
-        <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
-             xmlns="http://www.w3.org/2000/svg">
-          <use href="#icon_cart"/>
-        </svg>
-        <span class="cart-amount d-block position-absolute js-cart-items-count">3</span>
-      </a>
-
-      <a class="header-tools__item" href="#" data-bs-toggle="modal" data-bs-target="#siteMap">
-        <svg class="nav-icon" width="25" height="18" viewBox="0 0 25 18" xmlns="http://www.w3.org/2000/svg">
-          <rect width="25" height="2"/>
-          <rect y="8" width="20" height="2"/>
-          <rect y="16" width="25" height="2"/>
-        </svg>
-      </a>
     </div><!-- /.header__tools -->
   </div><!-- /.header-desk header-desk_type_1 -->
 </header>
@@ -622,7 +554,7 @@
 				<div class="col-lg-5">
 					<div class="d-flex justify-content-between mb-4 pb-md-2">
 						<div class="breadcrumb mb-0 d-none d-md-block flex-grow-1">
-							<a href="#" class="menu-link menu-link_us-s text-uppercase fw-medium">Home</a>
+							<a href="index.html" class="menu-link menu-link_us-s text-uppercase fw-medium">Home</a>
 							<span class="breadcrumb-separator menu-link fw-medium ps-1 pe-1">/</span>
 							<a href="#" class="menu-link menu-link_us-s text-uppercase fw-medium">The Shop</a>
 						</div><!-- /.breadcrumb -->
@@ -777,7 +709,7 @@
       <div class="footer-column footer-menu mb-4 mb-lg-0">
         <h6 class="sub-menu__title text-uppercase">Quick Links</h6>
         <ul class="sub-menu__list list-unstyled">
-          <li class="sub-menu__item"><a href="./contact.html" class="menu-link menu-link_us-s">Home</a>
+          <li class="sub-menu__item"><a href="index.html" class="menu-link menu-link_us-s">Home</a>
           </li>
           <li class="sub-menu__item"><a href="./about.html" class="menu-link menu-link_us-s">About Us</a></li>
 
@@ -1284,7 +1216,7 @@
 												<a class="nav-link nav-link_rline" id="tab-item-3-tab" data-bs-toggle="tab" href="#tab-item-3" role="tab" aria-controls="tab-item-3" aria-selected="false"><span class="rline-content">KIDS</span></a>
 											</li>
 											<li class="nav-item position-relative" role="presentation">
-												<a class="nav-link nav-link_rline" href="#"><span class="rline-content">HOME</span></a>
+												<a class="nav-link nav-link_rline" href="index.html"><span class="rline-content">HOME</span></a>
 											</li>
 											<li class="nav-item position-relative" role="presentation">
 												<a class="nav-link nav-link_rline" href="#"><span class="rline-content">COLLECTION</span></a>
